[gd_scene load_steps=4 format=3 uid="uid://dqb04fi2iwei2"]

[ext_resource type="Script" uid="uid://3knal1u24642" path="res://kivalasztas.gd" id="1_ugpqc"]
[ext_resource type="Texture2D" uid="uid://olvdfejdahpc" path="res://abstract-colorful-pixel-background.jpg" id="2_4npa1"]
[ext_resource type="FontFile" uid="uid://begys37367k2g" path="res://BoldPixels.ttf" id="3_b7d7m"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_ugpqc")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(960, 540)
scale = Vector2(0.64, 0.54)
texture = ExtResource("2_4npa1")

[node name="Button" type="Button" parent="."]
offset_left = -178.0
offset_top = 404.0
offset_right = -101.0
offset_bottom = 435.0
text = "Kiválaszt"

[node name="Label" type="Label" parent="."]
offset_left = 108.0
offset_top = 80.0
offset_right = 1830.0
offset_bottom = 303.0
theme_override_fonts/font = ExtResource("3_b7d7m")
theme_override_font_sizes/font_size = 180
text = "Hova szeretnél menni?"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 803.0
offset_top = 435.0
offset_right = 1191.0
offset_bottom = 1027.0

[node name="haz" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Szobám"

[node name="nappali" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Nappali"

[node name="kert" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Kert"

[node name="utca" type="Button" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = "Utca"

[node name="nappalireggel" type="Button" parent="VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/haz" to="." method="_on_haz_pressed"]
[connection signal="pressed" from="VBoxContainer/nappali" to="." method="_on_nappali_pressed"]
[connection signal="pressed" from="VBoxContainer/kert" to="." method="_on_kert_pressed"]
[connection signal="pressed" from="VBoxContainer/utca" to="." method="_on_utca_pressed"]
[connection signal="pressed" from="VBoxContainer/nappalireggel" to="." method="_on_nappalireggel_pressed"]
